// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceMath #getInputToRatio edge cases gas: returns 0 if price is equal 1`] = `517`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps gas 1`] = `9764`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps snapshot 1`] = `
Object {
  "amountIn": "11305074013661421001",
  "amountInLessFee": "11237243569579452474",
  "amountInPlus1": "11305074013661421002",
  "amountInPlus1LessFee": "11237243569579452475",
  "amountOut": "183503419072273967",
  "amountOutWith1MoreWeiInput": "183503419072273967",
  "lpFee": 60,
  "priceAfterSwap": "389422264390112072133427985743274010",
  "priceAfterSwapWith1MoreWeiInput": "389422264390112072139787224691507200",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps gas 1`] = `9774`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps snapshot 1`] = `
Object {
  "amountIn": "21133345019035461734",
  "amountInLessFee": "20710678118654752499",
  "amountInPlus1": "21133345019035461735",
  "amountInPlus1LessFee": "20710678118654752500",
  "amountOut": "292893218813452476",
  "amountOutWith1MoreWeiInput": "292893218813452476",
  "lpFee": 200,
  "priceAfterSwap": "519229685853482763580008280005519324",
  "priceAfterSwapWith1MoreWeiInput": "519229685853482763587351296642726493",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "519229685853482762853049632922009600",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps gas 1`] = `9875`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps snapshot 1`] = `
Object {
  "amountIn": "415459942199694130",
  "amountInLessFee": "414213562373095047",
  "amountInPlus1": "415459942199694131",
  "amountInPlus1LessFee": "414213562373095048",
  "amountOut": "29289321881345247469",
  "amountOutWith1MoreWeiInput": "29289321881345247519",
  "lpFee": 30,
  "priceAfterSwap": "259614842926741382091067822128253589",
  "priceAfterSwapWith1MoreWeiInput": "259614842926741381723916990267895141",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps gas 1`] = `9875`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps snapshot 1`] = `
Object {
  "amountIn": "416713845445769665",
  "amountInLessFee": "414213562373095047",
  "amountInPlus1": "416713845445769666",
  "amountInPlus1LessFee": "414213562373095048",
  "amountOut": "29289321881345247469",
  "amountOutWith1MoreWeiInput": "29289321881345247519",
  "lpFee": 60,
  "priceAfterSwap": "259614842926741382091067822128253589",
  "priceAfterSwapWith1MoreWeiInput": "259614842926741381723916990267895141",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves gas 1`] = `4207`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves snapshot 1`] = `
Object {
  "amountIn": "416",
  "amountInLessFee": "413",
  "amountInPlus1": "417",
  "amountInPlus1LessFee": "414",
  "amountOut": "29228",
  "amountOutWith1MoreWeiInput": "29278",
  "lpFee": 60,
  "priceAfterSwap": "260063151643472626274848044028000448",
  "priceAfterSwapWith1MoreWeiInput": "259695628309264554133616521495830006",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000",
  "reserve1": "100000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps gas 1`] = `9875`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps snapshot 1`] = `
Object {
  "amountIn": "155399837648670546",
  "amountInLessFee": "154700538379251528",
  "amountInPlus1": "155399837648670547",
  "amountInPlus1LessFee": "154700538379251529",
  "amountOut": "13397459621556135247",
  "amountOutWith1MoreWeiInput": "13397459621556135322",
  "lpFee": 45,
  "priceAfterSwap": "389422264390112072827776355164145551",
  "priceAfterSwapWith1MoreWeiInput": "389422264390112072153277207641951089",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;
